# reminders-like-app

./: .gitignore  Dockerfile  README.md  alembic.ini  dbc.py  docker-compose.yml  pyproject.toml
data/: collections.json  tasks.json  users.json
migrations/: env.py
migrations/versions/: 6af1e1ea2cb8_.py  9b9ba4a768da_.py  cb3366d9d1cd_.py  e9bbe903f593_.py  f6be176be455_.py
src/: config.py  database.py  exceptions.py  main.py  services.py
src/collections/: dependencies.py  models.py  router.py  schemas.py  services.py
src/services/: base.py
src/tags/: models.py
src/tasks/: dependencies.py  models.py  router.py  schemas.py  services.py
src/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  service.py  services.py
